src/objects/PhotoForItem__c.object
<CustomObject>
    <fields>
        <fullName>DisplayedImgFormula__c</fullName>
        <formula>IMAGE(&quot;imgURL__c&quot;, &quot;Photo&quot;, 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayedImgFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PhotosForItem</relationshipLabel>
        <relationshipName>PhotosForItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>imgURL__c</fullName>
        <label>imgURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PhotoForItem</label>
    <nameField>
        <label>PhotoForItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PhotosForItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>